--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         function createITITrial(backgroundImage) {
             return {
                 type: jsPsychHtmlKeyboardResponse,
-                stimulus: `<img src="${backgroundImage}" style="height: 550; position: absolute; top: 0; left: 0; object-fit: cover;">`,
+                stimulus: `<img src="${backgroundImage}" style="height: 550px; position: absolute; top: 0; left: 0; object-fit: cover;">`,
                 choices: "NO_KEYS",
                 trial_duration: 500,
                 response_ends_trial: false
