--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 return {
                     type: jsPsychImageButtonResponse,
                     stimulus: trialData.image_path,
-                    stimulus_width: null,
-                    stimulus_height: null,
+                    stimulus_width: window.innerWidth * 0.6, // Constrain to 60% of screen width
+                    stimulus_height: window.innerHeight * 0.6, // Constrain to 60% of screen height
                     maintain_aspect_ratio: true,
                     choices: ['Click here'],
                     button_html: `<button class="jspsych-btn" 
@@ -199,7 +199,7 @@
                         border: none !important;
                         outline: none !important;
                         box-shadow: none !important;"></button>`,
-                    css_classes: ['custom-trial', 'practice-image'],
+                    css_classes: ['custom-trial', 'practice-image-container'],
                     response_ends_trial: true,
                     on_start: function(trial) {
                         if (trialData.audio_path) {
@@ -207,16 +207,17 @@
                         }
                         const style = document.createElement('style');
                         style.innerHTML = `
-                            .practice-image {
+                            .practice-image-container {
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
                                 width: 100%;
                                 height: 100vh;
+                                overflow: hidden;
                             }
-                            .practice-image img {
-                                max-width: 80%; /* Limit image width */
-                                max-height: 80%; /* Limit image height */
+                            .practice-image-container img {
+                                max-width: 60%;
+                                max-height: 60%;
                                 object-fit: contain;
                                 margin: 0 auto;
                             }
@@ -226,11 +227,6 @@
                                 border: none !important;
                                 outline: none !important;
                                 box-shadow: none !important;
-                            }
-                            .custom-trial button.jspsych-btn:hover {
-                                background-color: transparent !important;
-                                opacity: 0 !important;
-                                color: transparent !important;
                             }
                         `;
                         document.head.appendChild(style);
