--- a/index.html
+++ b/index.html
@@ -207,19 +207,23 @@
                         const style = document.createElement('style');
                         style.innerHTML = `
                             .practice-image-container {
+                                position: relative;
+                                width: 100%;
+                                height: 100vh;
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
-                                width: 100%;
-                                height: 100vh;
                                 overflow: hidden;
                             }
                             .practice-image-container img {
-                                width: 100%;
+                                position: absolute;
+                                left: 50%;
+                                transform: translateX(-50%);
+                                width: 100vw;
                                 height: auto;
                                 object-fit: contain;
-                                margin: 0 auto; /* Ensure horizontal centering */
-                                display: block; /* Allow margin auto to work */
+                                max-width: 100%;
+                                max-height: 100%;
                             }
                             .custom-trial button.jspsych-btn {
                                 opacity: 0 !important;
