--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         const style = document.createElement('style');
                         style.innerHTML = `
                             .practice-image-container {
-                                position: relative;
+                                position: absolute;
                                 width: 100%;
                                 height: 100vh;
                                 display: flex;
