--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                             }
                             .practice-image-container img {
                                 position: absolute;
-                                #left: 50%;
-                                #transform: translateX(-50%);
+                                left: 0;
+                                top: 0;
                                 width: 100vw;
                                 height: auto;
                                 object-fit: contain;
