--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
                                 position: absolute;
                                 width: 100%;
                                 height: 100vh;
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
+                                top: 0;
+                                left: 0;
                                 overflow: hidden;
                             }
                             .practice-image-container img {
